<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Getting Location Updates</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_update_location">Start update location</string>
    <string name="stop_update_location">Stop update location</string>
    <string name="download_json">Download JSON</string>
    <string name="read_stop_list_json">Read Stop List JSON</string>
    <string name="download_eta_json">Download ETA JSON</string>
    <string name="read_eta_json">read ETA JSON</string>
    <string name="delete_bus_stop_json">Delete Bus Stop JSON</string>
    <string name="delete_stop_eta_json">Delete Stop ETA JSON</string>
    <string name="auto_update_location">Auto Update Location</string>
    <string name="auto_download_eta">Auto download ETA data when update bus stop data</string>
    <string name="auto_show_eta">Auto show ETA data when ETA data is downloaded</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
</resources>
