<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2017 Google, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/start_updates_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="startUpdatesButtonHandler"
                    android:text="@string/start_update_location" />

                <Button
                    android:id="@+id/stop_updates_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center"
                    android:onClick="stopUpdatesButtonHandler"
                    android:text="@string/stop_update_location" />
            </LinearLayout>

            <TextView
                android:id="@+id/latitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/longitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/last_update_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/location_inadequate_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_settings_inadequate_warning"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_bus_stop_json_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="deleteBusStopJsonButtonHandler"
                    android:text="@string/delete_bus_stop_json" />

                <Button
                    android:id="@+id/delete_stop_eta_json_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="deleteStopEtaJsonButtonHandler"
                    android:text="@string/delete_stop_eta_json" />
            </LinearLayout>

            <TextView
                android:id="@+id/delete_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/download_json_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="startDownloadJSONButtonHandler"
                    android:text="@string/download_json" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/read_json_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="startReadJSONButtonHandler"
                    android:text="@string/read_stop_list_json" />

            </LinearLayout>

            <TextView
                android:id="@+id/bus_stop_json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textSize="@dimen/default_text_size" />

            <RelativeLayout
                android:id="@+id/bus_stop_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/download_eta_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="startDownloadEtaJSONButtonHandler"
                    android:text="@string/download_eta_json" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/eta_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/read_eta_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="startReadEtaJSONButtonHandler"
                    android:text="@string/read_eta_json" />

            </LinearLayout>

            <TextView
                android:id="@+id/stop_eta_update_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/eta_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
